bug 253936: got rid of spurrious assertions (r=dmose, sr=neil)