mailnews/mime/src/nsMsgHeaderParser.cpp
@@ -192,8 +192,6 @@ NS_IMETHODIMP nsMsgHeaderParser::ParseHeadersWithArray(const PRUnichar * aLine, 
 
 nsresult nsMsgHeaderParser::ParseHeaderAddresses (const char *charset, const char *line, char **names, char **addresses, PRUint32 *numAddresses)
 {
-  NS_ASSERTION(!line || IsUTF8(nsDependentCString(line)), "invalid UTF-8 in header");
-
   *numAddresses = msg_parse_Header_addresses(line, names, addresses);
 
   return NS_OK;
@@ -203,8 +201,6 @@ nsresult nsMsgHeaderParser::ExtractHeaderAddressMailboxes (const char *charset, 
 {
   if (mailboxes)
   {
-    NS_ASSERTION(!line || IsUTF8(nsDependentCString(line)), "invalid UTF-8 in header");
-    
     *mailboxes = msg_extract_Header_address_mailboxes(line);
     return NS_OK;
   }
@@ -216,8 +212,6 @@ nsresult nsMsgHeaderParser::ExtractHeaderAddressNames (const char *charset, cons
 {
   if (names)
   {
-    NS_ASSERTION(!line || IsUTF8(nsDependentCString(line)), "invalid UTF-8 in header");
-
     *names = msg_extract_Header_address_names(line);
     return NS_OK;
   }
@@ -230,8 +224,6 @@ nsresult nsMsgHeaderParser::ExtractHeaderAddressName (const char *charset, const
 {
   if (name)
   {
-    NS_ASSERTION(!line || IsUTF8(nsDependentCString(line)), "invalid UTF-8 in header");
-
     *name = msg_extract_Header_address_name(line);
     return NS_OK;
   }
@@ -243,8 +235,6 @@ nsresult nsMsgHeaderParser::ReformatHeaderAddresses (const char *charset, const 
 {
   if (reformattedAddress)
   {
-    NS_ASSERTION(!line || IsUTF8(nsDependentCString(line)), "invalid UTF-8 in header");
-
     *reformattedAddress = msg_reformat_Header_addresses(line);
     return NS_OK;
   }
@@ -256,9 +246,6 @@ nsresult nsMsgHeaderParser::RemoveDuplicateAddresses (const char *charset, const
 {
   if (newOutput)
   {
-    NS_ASSERTION(!addrs || IsUTF8(nsDependentCString(addrs)), "invalid UTF-8 in header");
-    NS_ASSERTION(!other_addrs || IsUTF8(nsDependentCString(other_addrs)), "invalid UTF-8 in header");
-
     *newOutput = msg_remove_duplicate_addresses(addrs, other_addrs, removeAliasesToMe);
     return NS_OK;
   }
@@ -269,7 +256,6 @@ nsresult nsMsgHeaderParser::RemoveDuplicateAddresses (const char *charset, const
 nsresult nsMsgHeaderParser::MakeFullAddress (const char *charset, const char* name, const char* addr, char ** fullAddress)
 {
   NS_ENSURE_ARG_POINTER(fullAddress);
-  NS_ASSERTION(!addr || IsUTF8(nsDependentCString(addr)), "invalid UTF-8 in header");
   
   *fullAddress = msg_make_full_address(name, addr);
   return NS_OK;
@@ -293,7 +279,6 @@ nsresult nsMsgHeaderParser::MakeFullAddressWString (const PRUnichar* name, const
 nsresult nsMsgHeaderParser::UnquotePhraseOrAddr (const char *line, PRBool preserveIntegrity, char** result)
 {
   NS_ENSURE_ARG_POINTER(result);
-  NS_ASSERTION(!line || IsUTF8(nsDependentCString(line)), "invalid UTF-8 in header");
   return msg_unquote_phrase_or_addr(line, preserveIntegrity, result);
 }
 
